system-wide-refactor (#162)